--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,69 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+  max-width: auto;
+  margin: 10px 30px; /*30px top/bottom and auto left/right */
+  text-align: left;
+}
+
+#shipmentsData {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#shipmentsData td,
+#shipmentsData th {
+  border: 1px solid #000000;
+  padding: 8px;
+}
+
+#shipmentsData tr:nth-child(even) {
+  background-color: #f4f7f8;
+}
+
+#shipmentsData tr:hover {
+  background-color: #fcffc7;
+}
+
+#shipmentsData th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: rgb(7, 173, 250);
+  color: rgb(0, 0, 0);
+}
+
+.shipment-details-panel {
+  background-color: #f0f0f0;
+  padding: 10px;
+  border: 1px solid #000000;
+  margin-top: 10px;
+}
+
+.details-panel {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: auto;
+  height: auto;
+  background-color: #ffffff;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  padding: 10px;
+  resize: both;
+  overflow: auto;
+  direction: rtl;
+}
+
+#viewBtn {
+  background-color: rgb(204, 204, 254);
+  width: 80px;
+  height: auto;
 }
